feat: update solutions to lc problem: No.1306
No.1306.Jump Game III