@@ -1,6 +1,5 @@
 class Solution {
     public boolean canReach(int[] arr, int start) {
-        int n = arr.length;
         Deque<Integer> q = new ArrayDeque<>();
         q.offer(start);
         while (!q.isEmpty()) {
@@ -8,12 +7,13 @@ class Solution {
             if (arr[i] == 0) {
                 return true;
             }
-            for (int j : Arrays.asList(i + arr[i], i - arr[i])) {
-                if (j >= 0 && j < n && arr[j] >= 0) {
+            int x = arr[i];
+            arr[i] = -1;
+            for (int j : List.of(i + x, i - x)) {
+                if (j >= 0 && j < arr.length && arr[j] >= 0) {
                     q.offer(j);
                 }
             }
-            arr[i] = -1;
         }
         return false;
     }
